--- a/lib/gryphon_web/templates/blog/index.html.eex
+++ b/lib/gryphon_web/templates/blog/index.html.eex
@@ -2,7 +2,7 @@
     <h2 class="">Blog</h2>
 <%= for post <- @posts do %>
     <article class="">
-        <%= link post.title, to: Routes.post_path(@conn, :show, post), class: "" %>
+        <%= link post.title, to: Routes.post_path(@conn, :show, post.slug), class: "" %>
         <p class=""><%= post.description %></p>
     </article>
 <% end %>
