--- a/lib/gryphon_web/templates/blog/show.html.eex
+++ b/lib/gryphon_web/templates/blog/show.html.eex
@@ -1,5 +1,5 @@
 <section class="">
     <h1 class=""><%= @post.title %></h1>
-    <p class=""><%= @post.date %></p>
-    <%= markdown(@post.body) %>
+    <p class=""><%= format_date @post.date %></p>
+    <%= markdown @post.body %>
 </section>
