--- a/lib/gryphon_web/templates/blog/show.html.eex
+++ b/lib/gryphon_web/templates/blog/show.html.eex
@@ -1,5 +1,6 @@
 <section class="">
     <h1 class=""><%= @post.title %></h1>
     <p class=""><%= format_date @post.date %></p>
+    <%= render "_tags.html", conn: @conn, tags: @post.tags %>
     <%= markdown @post.body %>
 </section>
