--- a/lib/gryphon_web/templates/tag/show.html.eex
+++ b/lib/gryphon_web/templates/tag/show.html.eex
@@ -1,7 +1,7 @@
 <section class="">
     <h2 class=""><%= "Listing posts tagged with " <> "\"" <> @tag <> "\"" %></h2>
 <%= for post <- @posts do %>
-    <%= link post.title, to: Routes.post_path(@conn, :show, post.slug) %>
+    <%= link post.title, to: Routes.blog_path(@conn, :show, post.slug) %>
     <p class=""><%= post.description %></p>
 <% end %>
 </section>
