--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,36 +1,172 @@
-/* This file is for your main application css. */
-@import "./phoenix.css";
+/***************
+ *   Resets
+ ***************/
 
-/* Alerts and form errors */
-.alert {
-  padding: 15px;
-  margin-bottom: 20px;
-  border: 1px solid transparent;
-  border-radius: 4px;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
-.alert-info {
-  color: #31708f;
-  background-color: #d9edf7;
-  border-color: #bce8f1;
+
+html {
+  font-size: 62.5%;
+
+  // @include respond-to("sm") {
+  //   font-size: 56.25%;
+  // }
+
+  // @include respond-to("md") {
+  //   font-size: 50%;
+  // }
+
+  // @include respond-to("lg") {
+  //   font-size: 45%;
+  // }
+
+  // @include respond-to("xl") {
+  //   font-size: 75%;
+  // }
 }
-.alert-warning {
-  color: #8a6d3b;
-  background-color: #fcf8e3;
-  border-color: #faebcc;
+
+body {
+  box-sizing: border-box;
+  background-color: var(--theme-ui-colors-background);
+  font-family: -apple-system, BlinkMacSystemFont, "San Francisco", "Helvetica Neue", Helvetica, Ubuntu, Roboto, Noto, "Segoe UI", Arial, sans-serif;
+  font-weight: 400;
+  line-height: 1.65;
+  height: 100%;
+
+  /* Disable auto-enlargement of small text in Safari */
+  text-size-adjust: 100%;
+
+  /* Enable kerning and optional ligatures */
+  text-rendering: optimizeLegibility;
 }
-.alert-danger {
-  color: #a94442;
-  background-color: #f2dede;
-  border-color: #ebccd1;
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
 }
-.alert p {
-  margin-bottom: 0;
+
+/***************
+ *    Theme
+ ***************/
+
+:root {
+  --theme-ui-colors-primary: #000;
+  --theme-ui-colors-background: #b5b4b4;
+  --theme-ui-colors-grey: #73737d;
+  --theme-ui-colors-accent: #6166dc;
+  --breakpoint-sm: 675px;
 }
-.alert:empty {
-  display: none;
+
+/***************
+ *     Main
+ ***************/
+
+.hh-section {
+  width: 100%;
+  max-width: 1220px;
+  margin: 0 auto;
+  padding: 0 4rem;
 }
-.invalid-feedback {
-  color: #a94442;
+
+.hh-back {
+  position: absolute;
+  display: inline-block;
+  opacity: 0;
+  width: 0;
+  height: 0;
+  visibility: hidden;
+  overflow: hidden;
+}
+
+.hh-nav {
+  position: relative;
+  padding-top: 10em;
+  display: flex;
+  justify-content: space-between;
+
+  &-brand {
+    width: 192px;
+    height: 23px;
+  }
+}
+
+.hh-hero {
+  max-width: 65rem;
+
+  h1 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 5.2rem;
+    line-height: 1.15;
+    color: var(--theme-ui-colors-primary, #000);
+    margin: 10rem 0;
+  }
+
+  &-bio {
+    font-size: 1.4rem;
+    line-height: 1.45;
+    color: var(--theme-ui-colors-grey, #73737d);
+    display: flex;
+    align-items: center;
+
+    p {
+      max-width: 43rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 675px) {
+  .hh-hero {
+    &-bio {
+      display: none;
+    }
+  }
+}
+
+.hh-avatar {
   display: block;
-  margin: -1rem 0 2rem;
+  position: relative;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  margin: 10px 26px 10px 0;
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: -5px;
+    top: -5px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    //border: 1px solid rgba(0,0,0,0.25);
+    border: red;
+  }
 }
+
+.hh-blog {
+  display: grid;
+
+  &-row {
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 488px;
+    align-items: center;
+    position: relative;
+    margin-bottom: 5em;
+    grid-column-gap: 96px;
+  }
+}
+
+::selection {
+  background-color: var(--link-color);
+  color: #fff;
+}
+
