--- a/lib/gryphon_web/templates/blog/index.html.eex
+++ b/lib/gryphon_web/templates/blog/index.html.eex
@@ -1,11 +1,26 @@
-<section class="">
-    <h2 class="">Blog</h2>
-<%= for post <- @posts do %>
-    <article class="">
-        <%= link post.title, to: Routes.blog_path(@conn, :show, post.slug), class: "" %>
-        <p class=""><%= post.description %></p>
-        <p class=""><%= post.date %></p>
-        <%= render "_tags.html", conn: @conn, tags: post.tags %>
-    </article>
-<% end %>
+<section class="hh-section">
+    <div class="hh-hero">
+        <h1 class="">Welcome to Novela, the simplest way to start publishing with Gatsby.</h1>
+        <div class="hh-hero-bio">
+            <%= link to: Routes.about_path(@conn, :index), class: "" do %>
+                <img src="<%= Routes.static_path(@conn, "/images/brotzky.jpg") %>" alt="Hans' bio picture" class="hh-avatar" />
+            <% end %>
+            <p class="">Written by You. This is where your author bio lives. Share your work, your joys and of course, your Twitter handle.</p>
+        </div>
+    </div>
+</section>
+
+<section class="hh-section">
+    <div class="hh-blog">
+    <%= for post <- @posts do %>
+        <%= link to: Routes.blog_path(@conn, :show, post.slug), class: "" do %>
+        <article class="hh-blog-row">
+            <p class=""><%= post.title %></p>
+            <p class=""><%= post.description %></p>
+            <p class=""><%= post.date %></p>
+            <%= render "_tags.html", conn: @conn, tags: post.tags %>
+        </article>
+        <% end %>
+    <% end %>
+    </div>
 </section>
