wip: light/dark mode button

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,6 +8,7 @@
   margin: 0;
   padding: 0;
   box-sizing: inherit;
+  font-size: inherit;
 }
 
 html {
@@ -53,6 +54,11 @@ textarea {
   font-family: inherit;
 }
 
+button, a {
+  cursor: pointer;
+  text-decoration: none;
+}
+
 /***************
  *    Theme
  ***************/
@@ -93,21 +99,91 @@ textarea {
   justify-content: space-between;
 
   &-brand {
-    width: 192px;
-    height: 23px;
+    width: 25px;
+    height: 25px;
+  }
+
+  &-mode {
+    position: relative;
+    display: flex;
+    opacity: 0.5;
+    border-radius: 5px;
+    width: 40px;
+    height: 25px;
+    background: transparent;
+    outline: none;
+    border-style: none;
+    appearance: none;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 0.3s ease;
+
+    &:hover {
+      opacity: 1;
+    }
+
+    span {
+      display: block;
+      position: relative;
+      width: 24px;
+      height: 24px;
+      border-radius: 50%;
+      border: 2px solid var(--theme-ui-colors-primary, #000);
+      background: var(--theme-ui-colors-primary, #000);
+      transform: scale(1);
+      transition: all 0.45s ease;
+      overflow: hidden;
+
+      &::before {
+        content: "";
+        position: absolute;
+        right: -9px;
+        top: -9px;
+        width: inherit;
+        height: inherit;
+        border: 2px solid var(--theme-ui-colors-primary, #000);
+        border-radius: inherit;
+        opacity: 1;
+        transform: translate(0,0);
+        transition: transform 0.45s ease;
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        width: 8px;
+        height: 8px;
+        border-radius: inherit;
+        margin: -4px 0 0 -4px;
+        top: 50%;
+        left: 50%;
+        box-shadow: 0 -23px 0 var(--theme-ui-colors-primary, #000),
+                    0 23px 0 var(--theme-ui-colors-primary, #000),
+                    23px 0 0 var(--theme-ui-colors-primary, #000),
+                    -23px 0 0 var(--theme-ui-colors-primary, #000),
+                    15px 15px 0 var(--theme-ui-colors-primary, #000),
+                    -15px 15px 0 var(--theme-ui-colors-primary, #000),
+                    15px -15px 0 var(--theme-ui-colors-primary, #000),
+                    -15px -15px 0 var(--theme-ui-colors-primary, #000);
+        transform: scale(0);
+        transition: all 0.35s ease;
+      }
+    }
   }
 }
 
 .hh-hero {
-  max-width: 65rem;
-
-  h1 {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 5.2rem;
-    line-height: 1.15;
-    color: var(--theme-ui-colors-primary, #000);
+  &-title {
+    max-width: 65.2rem;
     margin: 10rem 0;
+
+    h1 {
+      font-style: normal;
+      font-weight: 600;
+      font-size: 5.2rem;
+      line-height: 1.15;
+      color: var(--theme-ui-colors-primary, #000);
+    }
   }
 
   &-bio {
