--- a/lib/gryphon_web/templates/layout/app.html.eex
+++ b/lib/gryphon_web/templates/layout/app.html.eex
@@ -31,9 +31,9 @@
             <img src="<%= Routes.static_path(@conn, "/images/logo.svg") %>" alt="Hans Hoffman Logo" class="hh-nav-brand" />
             <span class="hh-back">Navigate back to the homepage</span>
           <% end %>
-          <%= link to: Routes.blog_path(@conn, :index), class: "" do %>
-            <img src="<%= Routes.static_path(@conn, "/images/logo.svg") %>" alt="Hans Hoffman Logo" class="hh-nav-brand" />
-          <% end %>
+          <button class="hh-nav-mode" aria-label="Activate dark mode" title="Activate dark mode">
+            <span class=""></span>
+          </button>
         </nav>
       </section>
     </header>
